--- a/fake-grid.css
+++ b/fake-grid.css
@@ -1,8 +1,6 @@
 .row{
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
 }
 
 .col-1{
@@ -51,4 +49,68 @@
 
 .col-12{
     width: 100%;
+}
+
+.flex-col{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.justify-content-start{
+    justify-content: start;
+}
+
+.justify-content-center{
+    justify-content: center;
+}
+
+.justify-content-end{
+    justify-content: end;
+}
+
+.align-content-start{
+    align-content: start;
+}
+
+.align-content-center{
+    align-content: center;
+}
+.align-content-end{
+    align-content: end;
+}
+
+.w-25{
+    width: 25% !important;
+}
+
+.w-50{
+    width: 50% !important;
+}
+
+.w-75{
+    width: 75% !important;
+}
+.w-100{
+    width: 100% !important;
+}
+
+.h-25{
+    height: 25% !important;
+}
+
+.h-50{
+    height: 50% !important;
+}
+
+.h-75{
+    height: 75% !important;
+}
+.h-100{
+    height: 100% !important;
+}
+
+.py-1{
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
