--- a/drum.css
+++ b/drum.css
@@ -32,8 +32,14 @@ body{
 
 .rhythm-button{
     border: 0;
-    height: 100%;
+    height: 90%;
     width: 50%; 
+}
+
+.rhythm-button:hover{
+    height: 99%;
+    width: 55%;
+    transition: height,width 0.5s;
 }
 
 .rhythm-button-orangered{
