--- a/drum.css
+++ b/drum.css
@@ -6,10 +6,15 @@ body{
 }
 
 #main-container{
-    background-color: #101010;
+    background-color: #292929;
     margin: 2.5% 5%;
     color: aliceblue;
     text-align: center;
+    padding-top: 2%;
+    padding-bottom: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 2.5em;
 }
 
 .drum-header{
@@ -27,7 +32,6 @@ body{
 
 .btn:hover{
     background-color: #ffe600;
-    
 }
 
 /*MUST SIMPLIFY*/
@@ -41,7 +45,7 @@ body{
 .rhythm-button:hover{
     height: 99%;
     width: 55%;
-    transition: height,width 0.5s;
+    transition: height,width 0.2s;
 }
 
 .rhythm-button-orangered{
